--- a/index.html
+++ b/index.html
@@ -2,112 +2,112 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Feedback control improves multi-legged robot locomotion on rugged terrain">
-  <meta property="og:title" content="Probabilistic Feedback Control for Rugged Terrain Locomotion"/>
-  <meta property="og:description" content="Project page for our paper: Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes."/>
-  <meta property="og:url" content="https://yourusername.github.io/feedback-control-locomotion/"/>
+  <meta name="description" content="Probabilistic Feedback Control for Multi-Legged Locomotion">
+  <meta property="og:title" content="Probabilistic Feedback Control for Multi-Legged Locomotion"/>
+  <meta property="og:description" content="Project page for the arXiv paper on feedback control for multi-legged robots"/>
+  <meta property="og:url" content="https://YOURUSERNAME.github.io/REPO_NAME/"/>
   <meta property="og:image" content="static/images/Fig1.png" />
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
-  <meta name="twitter:title" content="Probabilistic Feedback Control for Rugged Terrain Locomotion">
-  <meta name="twitter:description" content="Feedback control improves multi-legged robot locomotion.">
-  <meta name="twitter:image" content="static/images/Fig1.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="keywords" content="legged locomotion, feedback control, robotics, rough terrain">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Feedback Control for Rugged Terrain Locomotion</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <title>Probabilistic Feedback Control</title>
+  <link rel="icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
   <link rel="stylesheet" href="static/css/bulma.min.css">
-  <link rel="stylesheet" href="static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="static/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="static/css/fontawesome.all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="static/css/index.css">
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
-  <script defer src="static/js/fontawesome.all.min.js"></script>
-  <script src="static/js/bulma-carousel.min.js"></script>
-  <script src="static/js/bulma-slider.min.js"></script>
-  <script src="static/js/index.js"></script>
 </head>
+
 <body>
 
-<section class="hero">
+<!-- Title -->
+<section class="hero is-light">
   <div class="hero-body">
     <div class="container has-text-centered">
       <h1 class="title is-1">Probabilistic Feedback Control Enhances Multi-Legged Locomotion</h1>
-      <p>Juntao He, Baxi Chong, Jianfeng Lin, Zhaochen Xu, Hosain Bagheri, Esteban Flores, Daniel I. Goldman</p>
-      <p>Georgia Institute of Technology</p>
-      <div class="buttons is-centered mt-4">
-        <a class="button is-dark" href="static/paper.pdf" target="_blank"><i class="fas fa-file-pdf"></i>&nbsp;Paper</a>
-        <a class="button is-dark" href="https://arxiv.org/abs/2504.12345" target="_blank"><i class="ai ai-arxiv"></i>&nbsp;arXiv</a>
-        <a class="button is-dark" href="https://github.com/YOUR_REPO" target="_blank"><i class="fab fa-github"></i>&nbsp;Code</a>
-      </div>
+      <h2 class="subtitle is-4">Juntao He, Baxi Chong, Jianfeng Lin, Zhaochen Xu, Hosain Bagheri, Esteban Flores, Daniel I. Goldman</h2>
     </div>
   </div>
 </section>
 
-<section class="section">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3 has-text-centered">Summary Video</h2>
-    <div class="has-text-centered">
-      <iframe width="720" height="405" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-</section>
-
-<section class="section is-light">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3 has-text-centered">Abstract</h2>
-    <div class="content has-text-justified">
-      <p>Achieving robust legged locomotion on complex terrains poses challenges due to uncertainty in robot-environment interactions. We propose a probabilistic feedback control strategy for multi-legged robots that improves locomotion speed and stability across lab and outdoor rough terrain. We use vertical body undulation as a control parameter, guided by binary foot-ground contact sensors, to mitigate environmental disturbance. Experiments on 8- and 12-legged robots show 30–60% improvement in speed with reduced variance.</p>
-    </div>
-  </div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3 has-text-centered">Figures</h2>
-    <div class="content">
-      <div class="columns is-multiline">
-        <!-- Loop through 14 figures -->
-        <!-- Upload static/images/Fig#.png for each figure -->
-        <!-- Example for Fig1 -->
-        <div class="column is-half">
-          <figure class="image">
-            <img src="static/images/Fig1.png" alt="Figure 1">
-            <figcaption><strong>Fig 1:</strong> Description for Figure 1.</figcaption>
-          </figure>
+<!-- Summary Video -->
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <h2 class="title is-3 has-text-centered">Summary Video</h2>
+      <div class="columns is-centered">
+        <div class="column is-three-quarters">
+          <div class="video-container">
+            <iframe width="100%" height="450" src="https://www.youtube.com/embed/nWu7U5xZqbo" frameborder="0" allowfullscreen></iframe>
+          </div>
         </div>
-        <!-- Repeat this block up to Fig14 -->
       </div>
     </div>
   </div>
 </section>
 
-<section class="section is-light">
+<!-- Abstract -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Abstract</h2>
+    <div class="content has-text-justified">
+      <p>
+        Achieving robust legged locomotion on complex terrains poses challenges due to uncertainty in robot-environment interactions.
+        We propose a probabilistic feedback control strategy for multi-legged robots that improves locomotion speed and stability across lab and outdoor rough terrain.
+        We use vertical body undulation as a control parameter, guided by binary foot-ground contact sensors, to mitigate environmental disturbance.
+        Experiments on 8- and 12-legged robots show 30–60% improvement in speed with reduced variance.
+      </p>
+      <p>
+        📄 <a href="static/pdfs/Centipede_TRO_paper_v2.pdf" target="_blank">Download PDF</a><br>
+        🔗 <a href="https://arxiv.org/pdf/2411.07183" target="_blank">View on arXiv</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- Figures -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">Figures</h2>
+    <div class="content">
+
+      <!-- Repeat this block for Fig1 to Fig14 -->
+      <figure>
+        <img src="static/images/Fig1.png" alt="Fig 1">
+        <figcaption><strong>Fig 1:</strong> Description for Figure 1</figcaption>
+      </figure>
+
+      <figure>
+        <img src="static/images/Fig2.png" alt="Fig 2">
+        <figcaption><strong>Fig 2:</strong> Description for Figure 2</figcaption>
+      </figure>
+
+      <!-- ... -->
+      <figure>
+        <img src="static/images/Fig14.png" alt="Fig 14">
+        <figcaption><strong>Fig 14:</strong> Description for Figure 14</figcaption>
+      </figure>
+
+    </div>
+  </div>
+</section>
+
+<!-- BibTeX -->
+<section class="section">
   <div class="container is-max-desktop content">
-    <h2 class="title is-3">BibTeX</h2>
+    <h2 class="title">BibTeX Citation</h2>
     <pre><code>@article{he2025locomotion,
   title={Probabilistic approach to feedback control enhances multi-legged locomotion on rugged landscapes},
   author={He, Juntao and Chong, Baxi and Lin, Jianfeng and Xu, Zhaochen and Bagheri, Hosain and Flores, Esteban and Goldman, Daniel I.},
-  journal={arXiv preprint arXiv:2504.12345},
+  journal={arXiv preprint arXiv:2411.07183},
   year={2025}
 }</code></pre>
   </div>
 </section>
 
+<!-- Footer -->
 <footer class="footer">
-  <div class="container">
-    <div class="content has-text-centered">
-      <p>
-        Built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a>.<br>
-        Licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
-      </p>
-    </div>
+  <div class="content has-text-centered">
+    <p>
+      Built with the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template">Academic Project Page Template</a>.
+    </p>
   </div>
 </footer>
 
